update openapi and fix commit
